--- a/manual-root.tex
+++ b/manual-root.tex
@@ -16,9 +16,9 @@ breaklines=true
 \setlength{\cftsubsecnumwidth}{3.5em}
 
 \title{Manual for Package:
-root\protect\\Revision 2
+root\protect\\Revision 2:4M
 }
-\author{Karl Kästner}
+\author{Karl K\"astner}
 %\date{}
 
 \begin{document}
