included ADCP data processing routines

--- a/manual-root.tex
+++ b/manual-root.tex
@@ -16,7 +16,7 @@ breaklines=true
 \setlength{\cftsubsecnumwidth}{3.5em}
 
 \title{Manual for Package:
-root\protect\\Revision 2:4M
+root\protect\\Revision 2:5M
 }
 \author{Karl K\"astner}
 %\date{}
@@ -81,6 +81,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 
 \end{lstlisting}
+\subsection{ROOTFOLDER}
+${}$
+\begin{lstlisting}
+
+\end{lstlisting}
 \subsection{addpath\_recursive}
 ${}$
 \begin{lstlisting}
@@ -92,6 +97,11 @@ ${}$
 ${}$
 \begin{lstlisting}
  script emulating svn:external, which is not supported by GitHub
+
+\end{lstlisting}
+\subsection{quick\_data\_download}
+${}$
+\begin{lstlisting}
 
 \end{lstlisting}
 \subsection{startup}
