updated sub-directory revisions, full support of manning-coefficient in River_Tide and Backwater1D and new support for structural mechanic beam bending

--- a/manual-root.tex
+++ b/manual-root.tex
@@ -16,7 +16,7 @@ breaklines=true
 \setlength{\cftsubsecnumwidth}{3.5em}
 
 \title{Manual for Package:
-root\protect\\Revision 2:5M
+root\protect\\Revision 6:7M
 }
 \author{Karl K\"astner}
 %\date{}
@@ -35,13 +35,13 @@ root\protect\\Revision 2:5M
 \begin{lstlisting}
 Root folder of the source code belonging to the doctoral thesis:
 
-"Multi-Scale Monitoring and Modelling of the Kapuas River Delta", Karl Käster, 2019,
+"Multi-Scale Monitoring and Modelling of the Kapuas River Delta", Karl K\"aster, 2019,
 
 and master thesis:
 
-"Computing the Spectrum of the Confined Hydrogen Atom", Karl Kästner, 2012.
+"Computing the Spectrum of the Confined Hydrogen Atom", Karl K\"astner, 2012.
 
-Copyright (C) 2010-2019 Karl Kästner
+Copyright (C) 2010-2019 Karl K\"astner
 
 Installation instructions:
 	
